# backend/src/controllers/UserController.ts
@@ -1,52 +1,50 @@
 import { Request, Response } from 'express';
 import bcrypt from 'bcrypt';
 import jwt from 'jsonwebtoken';
-import sequelize from '../services/database';
 import { User } from '../models/User';
 import { sendResponse, handleInstanceError } from '../utils/helper';
 import config from '../utils/config';
-
-const userRepository = sequelize.getRepository(User);
+import { sendVerifyEmail } from '../services/sendEmail';
+import { v4 as uuid } from 'uuid';
+import { signJwt } from '../services/authenticate';
 
 const signUp = async (req: Request, res: Response) => {
   const { email, password } = req.body;
 
-  const user = await userRepository.findOne({ where: { email } });
+  const user = await User.findOne({ where: { email } });
 
   if (user) return sendResponse(res, { code: 409, message: 'user exists' });
 
   const passwordHash = await bcrypt.hash(password, 10);
 
-  const result = await userRepository.create({
-    email: email,
+  const verificationString = uuid();
+  const result = await User.create({
+    email,
     password: passwordHash,
+    verificationString,
   } as User);
   const { id, isVerified } = result;
 
-  jwt.sign(
-    {
-      id,
-      email,
-      isVerified,
-    },
-    config.JWT_SECRET,
-    { expiresIn: '2d' },
-    (error, token) => {
-      if (error) {
-        handleInstanceError(error, Error, (error) => {
-          console.error(error.message);
-          return sendResponse(res, { code: 500, message: error.message });
-        });
-      }
-      sendResponse(res, { data: token });
-    },
-  );
+  try {
+    await sendVerifyEmail(email, 'http://localhost:3000', verificationString);
+  } catch (error) {
+    handleInstanceError(error, Error, (error) => {
+      console.error(error.message);
+      return sendResponse(res, { code: 500, message: error.message });
+    });
+  }
+
+  signJwt(res, {
+    id,
+    email,
+    isVerified,
+  });
 };
 
 const login = async (req: Request, res: Response) => {
   const { email, password } = req.body;
 
-  const user = await userRepository.findOne({ where: { email } });
+  const user = await User.findOne({ where: { email } });
 
   if (!user) return sendResponse(res, { code: 409, message: 'user not found' });
 
@@ -56,32 +54,40 @@ const login = async (req: Request, res: Response) => {
 
   if (!isCorrect) return sendResponse(res, { code: 401, message: 'input error' });
 
-  jwt.sign(
-    {
-      id,
-      email,
-      isVerified,
-    },
-    config.JWT_SECRET,
-    { expiresIn: '2d' },
-    (error, token) => {
-      if (error) {
-        handleInstanceError(error, Error, (error) => {
-          console.error(error.message);
-          return sendResponse(res, { code: 500, message: error.message });
-        });
-      }
-      sendResponse(res, { data: token });
-    },
-  );
+  signJwt(res, {
+    id,
+    email,
+    isVerified,
+  });
+};
+
+const verifyEmail = async (req: Request, res: Response) => {
+  /* #swagger.security = [{
+            "bearerAuth": []
+    }] */
+  const { verificationString } = req.body;
+  const result = await User.findOne({ where: { verificationString } });
+
+  if (!result)
+    return sendResponse(res, { code: 409, message: 'The email verification code is incorrect' });
+
+  const { id, email } = result;
+
+  await User.update({ isVerified: true }, { where: { id } });
+
+  signJwt(res, {
+    id,
+    email,
+    isVerified: true,
+  });
 };
 
 const getAllUsers = async (req: Request, res: Response) => {
-    /* #swagger.security = [{
+  /* #swagger.security = [{
             "bearerAuth": []
     }] */
   try {
-    const users = await userRepository.findAll();
+    const users = await User.findAll();
     sendResponse(res, { data: users });
   } catch (error) {
     console.error('Error retrieving users:', error);
@@ -89,4 +95,4 @@ const getAllUsers = async (req: Request, res: Response) => {
   }
 };
 
-export { signUp,login, getAllUsers };
+export { signUp, login, verifyEmail, getAllUsers };
