# backend/src/routes/index.ts
@@ -5,6 +5,6 @@ import userRoutes from "./userRoutes";
 
 const router = express.Router();
 
-router.use('/users', userRoutes);
+router.use('/user', userRoutes);
 
 export default router;
