# backend/src/routes/userRoutes.ts
@@ -1,10 +1,11 @@
 import express from 'express';
-import { signUp, login, getAllUsers } from '../controllers/UserController';
+import { signUp, login, verifyEmail, getAllUsers } from '../controllers/UserController';
 
 const router = express.Router();
 
 router.post('/signup', signUp);
 router.post('/login', login);
+router.put('/verfiy-email', verifyEmail);
 
 router.get('/', getAllUsers);
 
